--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"author": "Vincent P.",
 	"type": "module",
 	"main": "index.ts",
+	"prisma": {
+		"schema": "./src/db/schema.prisma"
+	},
 	"scripts": {
 		"start": "npx ts-node index.ts",
 		"build": "clear && tsx scripts/build",
@@ -35,6 +38,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.11.1",
 		"@types/multer": "^2.0.0",
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
@@ -43,6 +47,7 @@
 		"mysql2": "^3.14.1",
 		"nodemailer": "^7.0.3",
 		"path": "^0.12.7",
+		"prisma": "^6.11.1",
 		"puppeteer": "^24.10.2",
 		"sharp": "^0.34.2",
 		"tsconfig-paths": "^4.2.0",
