--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,15 @@
 			"@middleware/*": ["src/middleware/*/index.ts"],
 			"@routes": ["src/routes/index.ts"],
 			"@routes/*": ["src/routes/*"],
-			"@services": ["src/services/index.ts"],
+			"@services": ["src/services/webscraper.ts"],
 			"@services/*": ["src/services/*"],
 			"@tests": ["src/tests/index.ts"],
 			"@tests/*": ["src/tests/*"],
-			"@webscraper": ["src/webscraper/index.ts"],
-			"@webscraper/*": ["src/webscraper/*"],
-			"@util": ["src/util.ts"],
+			"@webscraper": ["src/services/webscraper.ts"],
+			"@webscraper/*": ["src/services/webscraper/*"],
+			"@scrapers": ["src/scrapers/index.ts"],
+			"@scrapers/*": ["src/scrapers/*"],
+			"@lib/*": ["src/lib/*"],
 			"@types": ["src/types/index.d.ts"]
 		}
 	},
