double schema fix & db helpers

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"type": "module",
 	"main": "index.ts",
 	"prisma": {
-		"schema": "./src/db/schema.prisma"
+		"schema": "./src/db/prisma/schema.prisma"
 	},
 	"scripts": {
 		"start": "npx ts-node index.ts",
