added a task registry, refactored tasks to extend TaskExecutor class & updated various logging & init logic

--- a/testconfig.json
+++ b/testconfig.json
@@ -1,5 +1,5 @@
 {
-	"select": ["auth-upload-flow", "webscrape"],
+	"select": ["auth-upload-flow"],
 	"excluded": [],
 	"prioritized": [],
 	"extensions": ["ts", "js"],
