--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"schema": "./src/db/prisma/schema.prisma"
 	},
 	"scripts": {
-		"start": "npx ts-node index.ts",
-		"build": "clear && tsx scripts/build",
-		"lint": "npx eslint . --ext .ts,.js --ignore-pattern 'src/db/prisma/**'",
-		"test": "clear && tsx scripts/test",
 		"dev": "colima start && docker-compose up -d && nodemon",
+		"start": "npx ts-node index.ts",
 		"stop": "docker-compose down && colima stop",
-		"db/setup": "tsx scripts/db/setup.ts"
+
+		"build": "npm run clean-task-union && clear && tsx scripts/build",
+		"lint": "npm run clean-task-union && npx eslint . --ext .ts,.js --ignore-pattern 'src/db/prisma/**'",
+		"test": "npm run clean-task-union && clear && tsx scripts/test",
+
+		"generate-task": "npm run clean-task-union && npx tsx scripts/generator/task.ts",
+		"clean-task-union": "npx tsx scripts/generator/clean-task-union.ts"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.30.1",
@@ -36,6 +39,7 @@
 		"esbuild": "^0.25.5",
 		"eslint": "^9.30.1",
 		"eslint-plugin-unused-imports": "^4.1.4",
+		"inquirer": "^12.8.2",
 		"nodemon": "^3.1.10",
 		"supertest": "^7.1.1",
 		"ts-node": "^10.9.2",
