--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
 		"dev": "colima start && docker-compose up -d && nodemon",
 		"start": "node dist/index.js",
 		"stop": "docker-compose down && colima stop",
-		
 		"synctypes": "npx tsx scripts/generators/sync-types/bootstrap.ts && clear",
 		"build": "yarn synctypes && tsx scripts/build",
 		"lint": "yarn synctypes && npx eslint . --ext .ts,.js --ignore-pattern 'src/db/prisma/**'",
 		"test": "yarn synctypes && tsx scripts/test",
-		
 		"generate-task": "yarn synctypes && npx tsx scripts/generators/task/generator.ts"
 	},
 	"devDependencies": {
@@ -49,6 +47,7 @@
 		"@prisma/client": "^6.11.1",
 		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
+		"dotenv": "^17.2.0",
 		"express": "^5.1.0",
 		"express-session": "^1.18.1",
 		"jsdom": "^26.1.0",
