--- a/scripts/config.json
+++ b/scripts/config.json
@@ -4,7 +4,7 @@
 	},
 	"build": {
 		"aliasMap": {
-			"@app": "./src/App",
+			"@app": "./src/stage-scraper.ts",
 			"@auth/": "./src/auth/",
 			"@db/": "./src/db/",
 			"@middleware/": "./src/middleware/",
